@@ -1,1 +1,1 @@
-airtime/audio_samples var/lib/airtime/audio_samples
+airtime/audio_samples srv/airtime/
