@@ -1,14 +1,8 @@
 [PHP]
 memory_limit = 256M
 magic_quotes_gpc = Off
-request_order = "GPC"
 file_uploads = On
-post_max_size = 150M
-upload_max_filesize = 150M
 upload_tmp_dir = /tmp
-
-[Session]
-session.gc_probability = 0
 
 [Phar]
 phar.readonly = Off
