@@ -1,13 +1,14 @@
-airtime/application var/lib/airtime
-airtime/build var/lib/airtime
-airtime/dev_tools var/lib/airtime
+airtime/airtime_mvc/application var/lib/airtime
+airtime/airtime_mvc/build var/lib/airtime
+airtime/airtime_mvc/library var/lib/airtime
+airtime/airtime_mvc/public var/lib/airtime
+airtime/airtime_mvc/tests var/lib/airtime
+
 airtime/install var/lib/airtime
-airtime/library var/lib/airtime
 airtime/plugins var/lib/airtime
-airtime/public var/lib/airtime
 airtime/python_apps var/lib/airtime
-airtime/tests var/lib/airtime
 airtime/utils var/lib/airtime
+
 debian/etc/apache.conf /etc/airtime/
 debian/etc/airtime.ini /etc/airtime/
 debian/etc/apache.vhost.tpl /etc/airtime/
